# cognitive-bias-detector

./: Cargo.toml  README.md
src/: main.rs
src/ai/: anthropic.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  prompt.rs
src/app/: mod.rs  state.rs
src/biases/: codex.rs  engine.rs  mod.rs  patterns.rs
src/config/: mod.rs
src/ui/: codex.rs  config.rs  detail.rs  input.rs  mod.rs  plain.rs  results.rs  widgets.rs
