[package]
name = "cognitive-bias-detector"
version = "0.1.0"
edition = "2021"
description = "A terminal-based cognitive bias detector with AI integration"
license = "MIT"
repository = "https://github.com/ling0x/cognitive-bias-detector"
keywords = ["cognitive-bias", "nlp", "tui", "ratatui", "ai"]
categories = ["command-line-utilities"]

[[bin]]
name = "cbd"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
regex = "1"
unicode-segmentation = "1"
unicode-width = "0.2"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
dirs = "6"
toml = "0.8"
strsim = "0.11"
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
