[package]
name = "cognitive-bias-detector"
version = "0.2.0"
edition = "2024"
description = "A terminal-based cognitive bias detector with AI integration"
license = "MIT"
repository = "https://github.com/ling0x/cognitive-bias-detector"
keywords = ["cognitive-bias", "nlp", "tui", "ratatui", "ai"]
categories = ["command-line-utilities"]

[[bin]]
name = "cbd"
path = "src/main.rs"

[dependencies]
ratatui    = "0.30"
crossterm  = "0.29"
tokio      = { version = "1.50", features = ["full"] }
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest    = { version = "0.13", features = ["json", "rustls", "webpki-roots"], default-features = false }
regex      = "1.12"
unicode-segmentation = "1.12"
unicode-width        = "0.2"
clap       = { version = "4.6", features = ["derive"] }
anyhow     = "1.0"
dirs       = "6.0"
toml       = "1.0"
strsim     = "0.11"
once_cell  = "1.21"
chrono     = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
